# djp

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_plugins/: __init__.py  hookspecs.py
djp/: __init__.py  hookspecs.py
djp/management/commands/: showplugins.py
docs/: Makefile  conf.py  creating_a_plugin.md  index.md  installing_plugins.md  plugin_hooks.md  requirements.txt  starting_a_plugin.md  writing_plugins.md  writing_tests.md
docs/_templates/: base.html
tests/: test_django_plugins.py
tests/plugins/: asgi_wrapper.py  installed_apps.py  middleware.py  settings.py  urlpatterns.py
tests/test_project/: middleware.py  settings.py  urls.py
